# pixi_envs

./: .gitattributes  .gitignore  mutagen.yml  mutagen.yml.asc  pixi.toml  readme.org
.vault/: .gitignore  06dd1897846cd513.gpg  0b7e8bef56a3284e.gpg  0fb3aff6e406cd54.gpg  10dd68b6c98d09d5.gpg  15ac52b70072df27.gpg  1f4077eea1a1915a.gpg  24f2da6dda9041f8.gpg  32ff3dc6281b3ecd.gpg  33d31c3691a5d7ad.gpg  3fc56f86e0257e65.gpg  4cbd943c8d9d924f.gpg  504f860f0732f6ae.gpg  57b155cc63546299.gpg  598ded45824d2271.gpg  631e04513078d30c.gpg  63fb1395a4f345e7.gpg  6d0a392ea2f658af.gpg  802e991b4e998c6a.gpg  b0ba06d7799e9771.gpg  b1f63e7b993c6b1a.gpg  c7588f396043ef89.gpg  cdbc2f6512657e3c.gpg  e6a14e3a1c58b76c.gpg  eb118042857c2740.gpg  eb33a1d556c5e75a.gpg  manifest.gpg
asv/: .gitignore  pixi.toml  readme.org
atomistic-cookbook/: .gitignore  jupytext.toml  pixi.toml  readme.org
conda/: .gitignore
eb-eon/: .gitignore  activate.sh  pixi.toml
repro/: .gitignore  readme.org
repro/gpr_optim_fw/: .gitignore  pixi.toml  pyproject.toml  readme.org
repro/gpr_optim_fw/config/: FW_config.yaml  my_fworker.yaml  my_launchpad.yaml.template  my_qadapter.yaml
repro/gpr_optim_fw/scripts/: mongo_down.sh  mongo_status.sh  mongo_up.sh  prepare_sella_si_inputs.py  render_launchpad_yaml.sh
repro/gpr_optim_fw/workflow/builders/: baker_neb_wf.py  d016_bench_wf.py  hermes_dimer_wf.py
repro/gpr_optim_fw/workflow/firetasks/: __init__.py  dimer.py  harvest.py  neb.py  prep.py
repro/gpr_optim_fw/workflow/runners/: dimer_runner.py  neb_runner.py
scripts/: vault.nim
wip/: .gitignore  (+1 more)
(+121 files in other folders)
